syntax = "proto3";

message ServiceRequestBody {
  oneof body {
    Ping ping = 1;
    Pong pong = 2;
  }
}

message Ping {}
message Pong {}

message Request {
  string id = 1;
  oneof body {
    UnaryRequestBody unary = 2;
    StreamRequestBody stream = 3;
    PushRequestBody push = 4;
    EndRequestBody end = 5;
    CancelRequestBody cancel = 6;
    ServiceRequestBody service = 7;
  }
}

message UnaryRequestBody {
  string service = 1;
  string method = 2;
  bytes payload = 3;
  map<string, string> metadata = 4;
  ResponseType responseType = 10;
}

message StreamRequestBody {
  string service = 1;
  string method = 2;
  map<string, string> metadata = 3;
  ResponseType responseType = 10;
}

message PushRequestBody {
  bytes payload = 1;
  map<string, string> metadata = 2;
}

message EndRequestBody {}

message CancelRequestBody { string reason = 1; }

message Response {
  string id = 1;
  oneof body {
    UnaryResponseBody unary = 2;
    PushResponseBody push = 3;
    EndResponseBody end = 4;
    ErrorResponseBody error = 5;
    MetadataResponseBody metadata = 6;
  }
}

message UnaryResponseBody { bytes payload = 1; }

message PushResponseBody { bytes payload = 1; }

message EndResponseBody {}

message ErrorResponseBody {
  Status status = 1;
  string message = 2;
  map<string, string> metadata = 3;
}

message MetadataResponseBody {
  map<string, string> metadata = 1;
}

enum Status {
  UNKNOWN = 0;
  OK = 1;
  CANCELLED = 2;
  INVALID_ARGUMENT = 3;
  DEADLINE_EXCEEDED = 4;
  NOT_FOUND = 5;
  ALREADY_EXISTS = 6;
  PERMISSION_DENIED = 7;
  UNAUTHENTICATED = 8;
  RESOURCE_EXHAUSTED = 9;
  FAILED_PRECONDITION = 10;
  ABORTED = 11;
  OUT_OF_RANGE = 12;
  UNIMPLEMENTED = 13;
  INTERNAL = 14;
  UNAVAILABLE = 15;
  DATA_LOSS = 16;
}

enum ResponseType {
  UNKNOWN = 0;
  UNARY = 1;
  STREAM = 2;
};
